[tool.poetry]
name = "pwntools-template"
version = "1.0.0"
description = "Pwntools template for binary exploitation"
authors = ["Dominik Prodinger <35099504+prodingerd@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pwntools = "^4.11.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
